# pipenv-cookiecutter

./: Pipfile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: Pipfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: test.yml
{{cookiecutter.repo_name}}/tests/: test_stub.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py
