[metadata]
name = Pipenv Cookiecutter
description =
author = Jonathon Vandezande
version = 0.2.0
url = https://github.com/jevandezande/pipenv-cookiecutter
long_description = file: README.md
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.9

[flake8]
ignore = E203, E266, E501, W503, E731
exclude = {{cookiecutter.repo_name}}
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4
