[metadata]
name = {{cookiecutter.project_name}}
description =
author = {{cookiecutter.author_name}}
version =
url = {{cookiecutter.project_url}}
long_description = file: README.md
license = {{cookiecutter.license}}
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: {{cookiecutter.license}}
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: {python_version}
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >= {python_version}
test_suite = tests/

[options.packages.find]
where = .

[options.entry_points]
console_scripts =

[mypy]
files = {{cookiecutter.repo_name}}, tests
ignore_missing_imports = true

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = {{cookiecutter.line_length}}
max-complexity = 18
select = B, C, E, F, W, T4

[pylint]
max-line-length = {{cookiecutter.line_length}}

[pylint:messages_control]
disable = C0330, C0326

[tool:pytest]
testpaths = tests/
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE
